# kurenai

./: .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: rust.yml
src/: canvas.rs  dot.rs  game_error.rs  game_loop.rs  game_service.rs  game_state.rs  graphic.rs  image.rs  key_event 2.rs  key_event.rs  lib.rs  point.rs  sprite.rs  test.rs  traits.rs
src/game_loop/: html_game_loop.rs
src/graphic/: dot.rs  html_canvas.rs  html_image.rs
src/image/: image_id.rs  image_repository.rs
src/key_event/: html_keyboard_event.rs
src/traits/: game_service.rs
tests/: wasm.rs
