# You must change these to your own details.
[package]
name = "kurenai"
description = "A 2d game engine for web-assembly"
version = "0.2.0"
authors = ["yu-hasebe <yu.has128@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true

[dependencies]
base64 = "0.13.0"
derive-new = "0.5.8"
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "KeyboardEvent",
  "KeyEvent",
  "Window",
]
