# You must change these to your own details.
[package]
name = "kurenai"
description = "A 2D game engine based on wasm"
version = "0.5.2"
authors = ["yu-hasebe <yu.has128@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true

[dependencies]
base64 = "0.13.0"
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "KeyboardEvent",
  "KeyEvent",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
